--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Luna Rose Manor
 author: Luna
 license: MIT License
+lang: en-GB
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
